--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.1.8",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.8.2",
@@ -16,11 +16,13 @@
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
         "prettier-plugin-blade": "^2.1.21",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
     },
     "prettier": {
-        "plugins": ["prettier-plugin-blade"],
+        "plugins": [
+            "prettier-plugin-blade"
+        ],
         "tabWidth": 4,
         "singleQuote": true
     }
