--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.4",
+        "ag-grid-vue3": "^33.3.2",
         "vue": "^3.5.16"
     }
 }
