--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.4",
         "ag-grid-vue3": "^33.3.2",
-        "vue": "^3.5.16"
+        "gridjs-vue": "^5.0.4",
+        "vue": "^3.5.16",
+        "vue-good-table": "^2.21.11"
     }
 }
